[CCP-145] Overflow issue fixed in synonym modal (#126)
Synonym modal was overflowing when synonym
is searched in the modal. Fixed it by adding an
overflow auto and setting  a max-height

--- a/Conceptpower+Spring/src/main/webapp/resources/assets/css/main.css
+++ b/Conceptpower+Spring/src/main/webapp/resources/assets/css/main.css
@@ -122,4 +122,8 @@ div.scrollable {
     overflow: auto;
     word-wrap: break-word;
 }
-		
+
+.synonym-modal-body {
+    overflow-y: auto;
+    max-height: 250px;
+}
